# mlir-practice

./: .gitignore  README.md
cpp-tutorial/: axisinfo.cpp  chapter10.cpp  chapter13-1.cpp  chapter13-2.cpp  chapter14-1.cpp  chapter6-1.cpp  chapter6.cpp  chapter7-1.cpp  chapter7.cpp  concept-modle.cpp  const1.cpp  const1.h  const2.cpp  const3.cpp  const4.cpp  const5.cpp  const6.cpp  distance.cpp  function.cpp  interface1.cpp  interface2.cpp  lower_bound.cpp  print.cpp  reference1.cpp  singleton.cpp  singleton2.cpp  visitor.cpp
mlir-stand-alone/: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-poly.sh  run.sh
mlir-stand-alone/.github/workflows/: manual.yml
mlir-stand-alone/include/polyaie/: CMakeLists.txt  InitAllDialects.h  InitAllPasses.h  Passes.h  Passes.td
mlir-stand-alone/lib/: AffinePreprocess.cpp
mlir-stand-alone/test/Conversion/: gemm.mlir  simple.mlir  simple_vectorize.mlir
mlir-stand-alone/tools/polyaie-opt/: CMakeLists.txt  polyaie-opt.cpp
pass-study/vector/: store-forward.mlir  test.sh
python-binding/: README.md  requirements.txt
python-binding/simple/: example.cpp  host.py  setup.py  test.sh
toy-project/toy/include/toy/: ToyDialect.td
transform-dialect/: .gitignore  README.md  full.mlir  test.sh  transform-next.mlir  transform.mlir
transform-dialect/Ch2/: CMakeLists.txt  build.sh
transform-dialect/Ch2/.cache/clangd/index/: MyExtension.cpp.591560219F390655.idx  transform-opt.cpp.9CA42087765D4605.idx
transform-dialect/Ch2/include/: CMakeLists.txt  MyExtension.h  MyExtension.td
transform-dialect/Ch2/lib/: CMakeLists.txt  MyExtension.cpp
transform-dialect/Ch2/test/: invalid.mlir  result.mlir  sequence.mlir  test.sh
transform-dialect/Ch2/transform-opt/: CMakeLists.txt
transform-dialect/Ch3/: CMakeLists.txt  build.sh
transform-dialect/Ch3/include/: CMakeLists.txt
transform-dialect/Ch3/lib/: CMakeLists.txt
transform-dialect/Ch3/test/: ops.mlir  result.mlir  result2.mlir  sequence.mlir  test.sh
transform-dialect/Ch3/transform-opt/: CMakeLists.txt
transform-dialect/Ch4/: CMakeLists.txt  build.sh
transform-dialect/Ch4/include/: CMakeLists.txt
transform-dialect/Ch4/lib/: CMakeLists.txt
transform-dialect/Ch4/test/: feature.mlir  multiple.mlir  sequence.mlir
transform-dialect/Ch4/transform-opt/: CMakeLists.txt
transform-dialect/fusion/: fusion.mlir  result1.mlir  test.mlir  test.sh
triton/: README.md
triton/baby-triton/: README.md  env_setup.sh  install_tvm.sh  pip-install-extra.sh  triton.py
triton/python-basic/: decorator.py  functional.py
